# ECE1724

./: .gitignore  PromptsResponse.txt  Proposal.md  README.md
data/: get_data.py  get_val.py
recipe-mpr/: test.json  train.json  val.json
recipe_docs/: italian_30_unique_recipes.txt
rrl/: Cargo.toml  server.py
rrl/examples/: basic_rag.rs  fine_tuning.rs  finetune_recipe_mpr.rs  load_from_huggingface.rs
rrl/output/chunks/doc_539e674b05997813/: chunks.json  metadata.json  summary.txt
rrl/output/chunks/doc_6b797a3a8d844e20/: chunks.json  metadata.json  summary.txt
rrl/output/chunks/doc_aa3fd27d0715e81/: chunks.json  metadata.json  summary.txt
rrl/output/embeddings/: doc_539e674b05997813_embeddings.json  doc_6b797a3a8d844e20_embeddings.json  doc_aa3fd27d0715e81_embeddings.json
rrl/output/indexes/bm25/: chunks.json  metadata.json
rrl/output/indexes/bm25/tantivy/: .managed.json  meta.json
rrl/output/indexes/hnsw/: chunks.json  id_mapping.json  metadata.json
rrl/src/: lib.rs  main.rs
rrl/src/cli/: infer.rs  mod.rs
rrl/src/cuda/: kernels.rs  layer_norm.rs  mod.rs
rrl/src/data/: mod.rs
rrl/src/data/chunkers/: mod.rs
rrl/src/data/loaders/: mod.rs
rrl/src/embedding/: mod.rs
rrl/src/embedding/backends/: candle_bert.rs  mod.rs  onnx.rs
rrl/src/embedding/cache/: mod.rs
rrl/src/evaluation/: mod.rs
rrl/src/evaluation/generation/: mod.rs
rrl/src/evaluation/msmarco/: mod.rs
rrl/src/evaluation/retrieval/: mod.rs
rrl/src/rag/: mod.rs  pipeline.rs  query.rs
rrl/src/rag/context/: builder.rs  mod.rs  templates.rs
rrl/src/rag/generator/: candle.rs  config.rs  mod.rs  qwen2_cuda.rs
rrl/src/retrieval/: mod.rs
rrl/src/retrieval/dense/: mod.rs
rrl/src/retrieval/hybrid/: mod.rs
rrl/src/retrieval/sparse/: mod.rs
rrl/src/server/: mod.rs
rrl/src/server/routes/: mod.rs
rrl/src/training/: checkpoint.rs  common.rs  dataset.rs  device.rs  evaluation.rs  hub.rs  mod.rs  optimizer.rs  trainer.rs
rrl/src/training/lora/: mod.rs
rrl/src/training/loss/: mod.rs
rrl/src/training/models/: bert.rs  bert_cuda.rs  bert_lora.rs  common.rs  loader.rs  mod.rs  tokenizer.rs
rrl/src/training/models/decoders/: decoder_lora.rs  mod.rs
rrl/src/training/models/encoders/: bert.rs  bert_cuda.rs  bert_lora.rs  encoder_utils.rs  mod.rs  roberta_lora.rs
rrl/src/tui/: app.rs  events.rs  mod.rs  rag.rs  training.rs  ui.rs
rrl/src/utils/: download.rs  mod.rs
rrl/test-docs/: ml.txt  rag.txt  rust.txt
rrl/ui/: index.html  package-lock.json  package.json
rrl/ui/src/: App.jsx  api.js  index.css
rrl/ui/src/pages/: Dashboard.jsx  DataUpload.jsx  Evaluation.jsx  Inference.jsx  Models.jsx  RAG.jsx  Training.jsx
