[package]
name = "rrl"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Lin", "Liz Zhu"]
description = "RustRAGLab - A Rust framework for RAG-aware fine-tuning and evaluation"

[lib]
name = "rrl"
path = "src/lib.rs"

[[bin]]
name = "rrl"
path = "src/main.rs"

[dependencies]
# CLI & async runtime
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.40", features = ["full"] }

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# ML & Embedding backends
tch = { version = "0.17", optional = true }
onnxruntime = { version = "0.0.14", optional = true }
ndarray = { version = "0.15", optional = true }
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }

# Retrieval & indexing
hnsw_rs = "0.3"
tantivy = "0.22"

# Tokenization & text processing
tiktoken-rs = "0.5"
unicode-segmentation = "1.12"

# Document parsing
pdf-extract = { version = "0.7", optional = true }

# Database & caching
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "stream", "rustls-tls"] }
flate2 = "1.0"
tar = "0.4"
chrono = "0.4"
once_cell = "1.20"

# TUI
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.12"

[features]
default = []
pdf = ["pdf-extract"]
tch-backend = ["tch", "candle-core", "candle-nn"]
onnx-backend = ["onnxruntime", "ndarray"]
cuda = ["onnx-backend"]
metal = ["onnx-backend"]
